fixed autocomplete field alignment and styling

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -95,6 +95,12 @@ body {
   box-shadow: 5px 0px @primary-color inset;
 }
 
+/* Autosuggestion lists */
+.react-autosuggest__suggestions-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 /* Background hints */
 .background-hint {
   display: flex;
